# parquet_to_postgres

./: Cargo.toml  README.md  main.rs
src/: main.rs
