[package]
name = "parquet_to_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data handling and file reading
parquet = "9.0"
arrow = "9.0"
chrono = "0.4"

# Asynchronous runtime and utilities
tokio = { version = "1", features = ["full", "macros"] }
tokio-postgres = "0.7"
futures = "0.3"

# Connection pooling
bb8 = "0.7" # Check for the latest version suitable for your needs
bb8-postgres = "0.7" # Ensure compatibility with tokio-postgres versions

# SQL parsing
sqlparser = "0.13.0"

# Serialization/Deserialization
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
